--- a/.screenrc
+++ b/.screenrc
@@ -7,4 +7,8 @@ vbell off
 # keep scrollback n lines
 defscrollback 1000
 
+# stop leaving junk text
 altscreen on
+
+# source ~/.bash_profile
+shell -$SHELL
